[Test] 도메인 테스트 대폭 확충 및 프로덕션 결함 수정
테스트 274개 -> 1396개. 기존 스위트는 74개에서 OOM으로 중단됐으나 이제 완주한다.
tag, problemsolve 등 테스트가 0개이던 도메인과 auth 토큰 계약, 예외 처리 경로를
채웠다. 라인 커버리지 74.7%, 클래스 커버리지 88.2%.

프로덕션 결함 수정:
- 검증 애노테이션이 전부 무동작이었다. jakarta.validation-api 만 클래스패스에 있고
  구현체가 없어 @NotNull/@Valid 20곳이 무시됐고, null 요청이 그대로 서비스에 들어가
  500이 됐다. spring-boot-starter-validation 추가
- MethodArgumentNotValidException 핸들러가 첫 인자로 BindingResult 를 받고 있었다.
  @ExceptionHandler 가 지원하지 않는 인자라 핸들러가 해석되지 못했고, 검증 실패가
  400 이 아니라 500 으로 나갔다
- DataIntegrityViolationException 핸들러 부재로 태그 중복·컬럼 길이 초과가 500이 됐다.
  중복은 409, 길이 초과는 400 으로 분류
- 태그: 소프트 삭제된 태그가 유니크 인덱스에서 이름을 계속 점유해, 지웠다가 같은 이름으로
  다시 만들면 Duplicate entry 로 500. 삭제된 행을 복구하도록 수정하고 동시 생성 경합도 처리
- problem.memo 길이 제약 부재로 256자 이상 저장 시 Data truncation 500. 길이 지정 +
  입력 검증 추가
- registerProblem 의 folderId null, ProblemSolve 의 problemId/answerStatus null 이
  findById(null) 로 500. 400 으로 거절
- refresh_token 컬럼이 varchar(255)인데 발급 JWT 실측 244자. 512로 확장
- identifier 가 비어도 가입이 통과돼 로그인마다 새 계정이 생성됐다. 검증 추가
- CryptoConverter 가 null 입력에서 NPE. AttributeConverter 계약대로 null 통과
- getReviewDueProblems 의 N+1 제거. mappedBy OneToOne 이 행마다 존재 확인 쿼리를
  발생시켜 프로젝션 조회로 교체
- Discord 웹훅 dedup 맵이 무한 증가하던 것에 상한 적용

테스트 기반 수정:
- 컨테이너 접속 정보를 ContextCustomizerFactory 로 전역 주입. 베이스 클래스를 상속하지
  않은 테스트가 datasource 를 못 받아 컨텍스트 로드 실패가 138건 발생했다
- authenticateAs 를 TestSecurityContextHolder 기반으로 교체. SecurityContextHolder 는
  MockMvc 요청에서 필터가 덮어써 인증이 필요한 요청이 전부 401 이 됐다
- DatabaseCleaner 가 테이블을 비우는 방식을 DDL 에서 DML 로 교체. 테스트마다 31개
  테이블에 DDL 을 거는 방식은 스위트를 완주 불가로 만들었다. 시퀀스 테이블은 시드가
  사라지지 않도록 대상에서 제외
- jacocoTestReport 의 dependsOn test 제거. 테스트가 실패하면 리포트가 건너뛰어져
  낡은 커버리지가 남았다

Flyway 마이그레이션 V23~V25 추가 (컬럼 확장, 미적용):
- ALGORITHM=INPLACE, LOCK=NONE 명시로 COPY 로 내려갈 때 즉시 실패하게 함
- 테이블별로 파일 분리해 중간 실패 시 상태 추적이 가능하도록 함
- 실패 복구 절차와 롤백 비용을 파일에 명시